# Notequarry

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
src/: main.rs  qt_ffi.rs
src/crypto/: encryption.rs  key_derivation.rs  mod.rs  secure_memory.rs
src/db/: connection.rs  mod.rs  queries.rs  schema.rs
src/ui/: helper.rs  main_test.cpp  mainwindow.cpp  mainwindow.h  mod.rs  qt_bridge.cpp  qt_bridge.h
ui_files/: main_window.slint
