[package]
name = "notequarry"
version = "0.1.0"
edition = "2024"

[dependencies]
# Slint for UI
slint = "1.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Encryption
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# OS paths
directories = "5.0"

# HTTP client (for sync)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
slint-build = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
